working on fixing running java plugin with Consulo 3